force-app/main/default/objects/Price_Trends__c/Price_Trends__c.object-meta.xml
<CustomObject>
    <label>Price Trend</label>
    <nameField>
        <displayFormat>PTR-{00000000}</displayFormat>
        <label>Price Trends Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Trends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>