force-app/main/default/objects/Price_Trends__c/fields/CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCode__c</fullName>
    <label>CurrencyCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>