force-app/main/default/objects/Price_Trends__c/fields/Quote_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Created_Date__c</fullName>
    <label>Quote Created Date</label>
    <type>DateTime</type>
</CustomField>