force-app/main/default/objects/Price_Trends__c/fields/Quote_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Last_Modified_Date__c</fullName>
    <label>Quote Last Modified Date</label>
    <type>DateTime</type>
</CustomField>