force-app/main/default/objects/Price_Trends__c/fields/Reuters_Code__c.field-meta.xml
<CustomField>
    <fullName>Reuters_Code__c</fullName>
    <label>Reuters Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>